feat: add support for compressed loos returned from our geohash endpoint
